# rpg-cli

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  example.yaml  rpg.fish  rpg.sh
.github/workflows/: release.yml  tests.yml
shell/: README.md  example.fish  example.ps1  example.sh
src/: character.rs  command.rs  datafile.rs  equipment.rs  event.rs  game.rs  location.rs  log.rs  main.rs  player.rs  quest.rs  randomizer.rs
src/character/: class.rs  classes.yaml  config.rs  enemy.rs  mod.rs  subclass.rs
src/datafile/: game040.rs  mod.rs
src/game/: battle.rs  chest.rs  data.rs  datafile.rs  game040.rs  mod.rs  tombstone.rs
src/item/: chest.rs  equipment.rs  key.rs  mod.rs  ring.rs  shop.rs  stone.rs  tombstone.rs
src/quest/: beat_enemy.rs  level.rs  mod.rs  ring.rs  tutorial.rs
