[package]
name = "rpg-cli"
version = "0.5.0"
authors = ["facundo <facundo.olano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
dirs = "3.0"
rand = { version = "0.8.3", features = ["alloc"] }
colored = "2"
clap = "3.0.0-beta.2"
typetag = "0.1"
dunce = "1.0.1"
once_cell = "1.7.2"
serde_json = "1.0.64"
