[package]
name = "rpg-cli"
version = "1.0.1"
authors = ["facundo <facundo.olano@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
bincode = "1.3.3"
dirs = "4.0"
rand = { version = "0.8.5", features = ["alloc"] }
colored = "2"
clap = { version = "^4", features = ["derive", "cargo", "deprecated"] }
typetag = "0.1"
dunce = "1.0.2"
once_cell = "1.12.0"
serde_json = "1.0.81"
serde_yaml = "0.8"
anyhow = "1.0"
strum = "0.24.1"
strum_macros = "0.24.0"
